--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/main.js",
+    "dev": "ts-node-dev src/index.ts",
+    "lint": "ts-standard",
+    "start": "node build/index.js",
+    "tsc": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +23,21 @@
   "homepage": "https://github.com/SofiaSMCC/hello-word#readme",
   "dependencies": {
     "express": "^4.21.2",
+    "express-validator": "^7.2.0",
     "hello-word": "file:"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "ts-node-dev": "^2.0.0",
+    "ts-standard": "^12.0.2",
+    "typescript": "^5.7.2"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "./tsconfig.json"
+    },
+    "extends": [
+      "./node_modules/ts-standard/eslintrc.json"
+    ]
   }
 }
