--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
   },
   "homepage": "https://github.com/SofiaSMCC/hello-word#readme",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "express-jwt": "^8.5.1",
     "express-validator": "^7.2.0",
-    "hello-word": "file:"
+    "hello-word": "file:",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
