--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "hello-word",
+  "name": "hello-expressjs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "lint": "ts-standard",
-    "start": "node build/index.js",
-    "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
@@ -28,12 +27,15 @@
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "express-validator": "^7.2.0",
+    "hello-expressjs": "file:",
     "hello-word": "file:",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
+    "@types/uuid": "^10.0.0",
     "ts-node-dev": "^2.0.0",
     "ts-standard": "^12.0.2",
     "typescript": "^5.7.2"
