--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
