--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-jwt": "^8.5.1",
     "express-validator": "^7.2.0",
